CSS 2.1 failure: dynamic-top-change-001 to 004 fail https://bugs.webkit.org/show_bug.cgi?id=68149

Reviewed by David Hyatt.

Source/WebCore:

In these tests a child inherits its top value from its parent and the parent's top value
is later updated by an onload event. The updated value is expected to cascade to the child.

The tests were failing because updating the value did not cascade immediately to the child inheriting it, though
it could be forced eventually with a full recalculation of the RenderStyle by changing the zoom factor
or opening the inspector.

The fix is to let the parent RenderStyle know that a child inherits a property explicitly and
recalculate children's style if the parent ever changes. This only happens if the property is inherited
explicitly, it does not apply to cases where the property is inherited by default.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyProperty):
* dom/Node.cpp:
(WebCore::Node::diff):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::RenderStyle):
* rendering/style/RenderStyle.h:
(WebCore::InheritedFlags::setHasExplicitlyInheritedProperties):
(WebCore::InheritedFlags::hasExplicitlyInheritedProperties):

LayoutTests:

* css2.1/20110323/dynamic-top-change-001.htm: Added.
* css2.1/20110323/dynamic-top-change-002.htm: Added.
* css2.1/20110323/dynamic-top-change-003.htm: Added.
* css2.1/20110323/dynamic-top-change-004.htm: Added.
* fast/table/border-collapsing/cached-change-tbody-border-color-expected.png:
  See https://bugs.webkit.org/show_bug.cgi?id=68149#c15
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-001-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-001-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-002-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-002-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-003-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-003-expected.txt: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-004-expected.png: Added.
* platform/chromium-linux/css2.1/20110323/dynamic-top-change-004-expected.txt: Added.

Canonical link: https://commits.webkit.org/87419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98805 268f45cc-cd09-0410-ab3c-d52691b4dbfc